--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_auth: ^4.2.4
   get_it: ^7.2.0
   cloud_firestore: ^4.3.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
