--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   get_it: ^7.2.0
   cloud_firestore: ^4.3.1
   intl: ^0.17.0
+  firebase_crashlytics: ^3.0.10
 
 dev_dependencies:
   flutter_test:
