--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   intl: ^0.17.0
   firebase_crashlytics: ^3.0.10
   mocktail: ^0.3.0
+  fake_cloud_firestore: ^2.3.0+3
 
 dev_dependencies:
   flutter_test:
